fix: resolve 115 audit issues across security, logic, performance, and config
Critical (17): token replay protection, SSRF/XSS hardening, Milvus filter
injection prevention, STOMP auth bypass fix, emotion decay logic, TTS race
condition, List.of() NPE, double embedding elimination, executor leak fix.

Major (38): sliding-window rate limiter, virtual-thread-friendly RestClient,
scheduler parallelization, startup fault tolerance, lock strategy fixes,
ChatMemory double-load elimination, HeartbeatChecker event decoupling.

Minor (38): ThreadLocal simplification, ErrorCode enum, timezone unification,
ObjectMapper injection, DateTimeFormatter constants, thread-safety docs.

Config/Deploy (22): .gitignore path fix, Redis password, port binding to
localhost, Milvus SDK version alignment, redundant prod config removal,
logback totalSizeCap, JVM params in start-prod.sh, CORS fail-fast.

All 265 tests pass. BUILD SUCCESS.

🤖 Generated with [Qoder][https://qoder.com]